tests/pos/test000.hs.hquals
qualif Foo(v: Int): v = 10
