tests/neg/Sumk.hquals
qualif PPLUS0(v:int): v >= ~A + ~B
qualif PPLUS1(v:int): v > ~A + ~B
